--- a/config/optional/views.view.locked_content.yml
+++ b/config/optional/views.view.locked_content.yml
@@ -224,7 +224,7 @@ display:
           plugin_id: content_lock_break_link
       filters:
         status:
-          value: true
+          value: '1'
           table: node_field_data
           field: status
           plugin_id: boolean
